[gd_scene load_steps=33 format=2]

[ext_resource path="res://Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/slime/slime_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyArea.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Walking",
"speed": 12.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Dying",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Hurt",
"speed": 9.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Falling",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 11.942, 10 )

[sub_resource type="CapsuleShape2D" id=27]
radius = 12.6298
height = 0.0

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 10.6322, 1.01862 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 1.57431, 3.15834 )

[node name="SlimeBody" type="KinematicBody2D"]
position = Vector2( 13.6785, 14.1252 )
collision_layer = 2
collision_mask = 2147483650
script = ExtResource( 1 )
behaviour = "sticky"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 25 )
animation = "Falling"
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.198418, 5.85353 )
shape = SubResource( 26 )

[node name="EnemyArea" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
visible = false
position = Vector2( 1.00765, 4.5962 )
shape = SubResource( 27 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.972283, 4.04686 )
scale = Vector2( 1.22097, 1.20511 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="FloorDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
position = Vector2( -0.102559, 17.3437 )
shape = SubResource( 28 )

[node name="WallDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2( 13.1456, -0.656651 )
shape = SubResource( 29 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallDetector"]
position = Vector2( -11.459, -1.0535 )
shape = SubResource( 29 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_shape_entered" from="EnemyArea" to="." method="_on_EnemyArea_area_shape_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="body_shape_entered" from="FloorDetector" to="." method="_on_FloorDetector_body_shape_entered"]
[connection signal="body_shape_exited" from="FloorDetector" to="." method="_on_FloorDetector_body_shape_exited"]
[connection signal="body_shape_entered" from="WallDetector" to="." method="_on_WallDetector_body_shape_entered"]
